--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
       <div class="container">
         <div class="hero-pic">
-        <img src="./LOGO.png" alt="profile pic" >
+        <img src="./logo.png" alt="profile pic" >
         </div >
         <div class="hero-text">
           <h5>Salam Alaikum, je suis un <span class="input">Programmer</span></h5>
